Added some passport routes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,16 +33,16 @@
   <div id="login" class="modal">
     <div class="modal-content">
         <div class="row login-row">
-            <button type="submit" class="btn waves-effect waves-light col s12 white black-text login-btn" id="google-btn"><img class="col s2 left white login-img" src="assets/images/google-login.svg">Sign in with Google</button>
+            <a href="/login/google" class="btn waves-effect waves-light col s12 white black-text login-btn" id="google-btn"><img class="col s2 left white login-img" src="assets/images/google-login.svg">Sign in with Google</a>
         </div>
         <div class="row login-row">
-            <button type="submit" class="btn waves-effect waves-light col s12 white black-text login-btn" id="facebook-btn"><img class="col s2 left white login-img" src="assets/images/fb-login.svg">Sign in with Facebook</button>
+            <a href="/login/facebook" class="btn waves-effect waves-light col s12 white black-text login-btn" id="facebook-btn"><img class="col s2 left white login-img" src="assets/images/fb-login.svg">Sign in with Facebook</a>
         </div>
         <div class="row login-row">
-            <button type="submit" class="btn waves-effect waves-light col s12 black-text white login-btn" id="twitter-btn"><img class="col s2 left white login-img" src="assets/images/twitter-login.svg">Sign in with Twitter</button>
+            <a href="/login/twitter" class="btn waves-effect waves-light col s12 black-text white login-btn" id="twitter-btn"><img class="col s2 left white login-img" src="assets/images/twitter-login.svg">Sign in with Twitter</a>
         </div>
         <div class="row login-row">
-            <button type="submit" class="btn waves-effect waves-light col s12 black-text white login-btn" id="linkedin-btn"><img class="col s2 left white login-img" src="assets/images/linkedin-login.svg">Sign in with Linkedin</button>
+            <a href="/login/linkedin" class="btn waves-effect waves-light col s12 black-text white login-btn" id="linkedin-btn"><img class="col s2 left white login-img" src="assets/images/linkedin-login.svg">Sign in with Linkedin</a>
         </div>
     <!-- email password Login -->
 {{!--       <form id="login-form" onsubmit="return false">
