Fix logo placement on pages and hamburger for side-nav on dashboard

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo"><img src="assets/images/logo.png" class="responsive-img" id="logo"></a>
+      <a id="logo-container" href="#" class="brand-logo center"><img src="assets/images/logo.png" class="responsive-img" id="logo"></a>
 <!--       <ul class="right hide-on-med-and-down">
         <li><a href="#">Dashboard</a></li>
       </ul>
