--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,13 +1,10 @@
   <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo"><img src="assets/images/logo.png" class="responsive-img" id="logo"></a>
-<!--       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Dashboard</a></li>
-      </ul>
- -->
+    <div class="nav-wrapper">
+      <a id="logo-container" href="#" class="brand-logo right"><img src="assets/images/logo.png" class="responsive-img" id="logo"></a>
+
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Dashboard</a></li>
       </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      <a href="#" data-activates="nav-mobile" class="button-collapse show-on-large left"><i class="material-icons">menu</i></a>
     </div>
   </nav>
