--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,10 +1,43 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper">
+      <a id="group-name" href="#" class="brand-logo center">Group Name</a>
       <a id="logo-container" href="#" class="brand-logo right"><img src="assets/images/logo.png" class="responsive-img" id="logo"></a>
 
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Dashboard</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Volunteer</a></li>
+        <li><a href="#">Members</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse show-on-large left"><i class="material-icons">menu</i></a>
     </div>
   </nav>
+  <section>
+    <div class="row">
+
+      <div id="volunteer" class="col s12 m4 l3">
+        <div class=card>
+          <div class="card-content">
+            <span class="card-title">Volunteer</span>
+          </div>
+        </div>
+      </div>
+
+      <div id="events" class="col s12 m4 l6">
+        <div class=card>
+          <div class="card-content">
+            <span class="card-title">Events</span>
+          </div>
+        </div>
+      </div>
+
+      <div id="member" class="col s12 m4 l3">
+        <div class=card>
+          <div class="card-content">
+            <span class="card-title">Member</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
