--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -48,7 +48,7 @@
           </div>
 
           {{!-- Form to create group --}}
-          <form method="POST" class="col s12 hide center-align" id="group-add-form" action="/org/add">
+          <form class="col s12 hide center-align group-post" id="group-add-form" data-route="/org/add">
             <div class="row">
               <div class="input-field col s12">
                 <i class="material-icons prefix green-text text-accent-4" id="group-add-icon">group</i>
@@ -66,7 +66,7 @@
           </div>
 
           {{!-- Form to join group --}}
-          <form method="POST" class="col s12 hide center-align" id="group-join-form" action="/org/join">
+          <form class="col s12 hide center-align group-post" id="group-join-form" data-route="/org/join">
             <div class="row">
               <div class="input-field col s12">
                 <i class="material-icons prefix green-text text-accent-4">group</i>
