Add type.js jQuery plugin

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -10,12 +10,40 @@ nav ul a,
 nav .brand-logo {
   color: #444;
 }
+
+/*Classes to hide and show elements with jQuery*/
 .hide {
   display: none;
 }
 .show {
   display: block;
 }
+
+/*Cursor animation for typed.js*/
+.typed-cursor{
+    display: inline-block;
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+
+
 #logo {
   height: 60px;
   padding-top: 5px;
