--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo center"><img src="assets/images/logo.png" class="responsive-img" id="logo"></a>
+      <div id="logo-container" class="brand-logo center"><img src="assets/images/logo.png" class="responsive-img" id="logo"></div>
 <!--       <ul class="right hide-on-med-and-down">
         <li><a href="#">Dashboard</a></li>
       </ul>
@@ -18,7 +18,7 @@
         <br><br>
         <h1 class="header center green-text text-accent-3">groots</h1>
         <div class="row center">
-          <h5 class="header col s12 light">Get Together. Get Organized.</h5>
+          <h5 class="header col s12"><span>Get </span><span id="typer"></span></h5>
         </div>
         <div class="row center">
           <a href="#login" id="download-button" class="btn-large waves-effect waves-light green accent-4 modal-trigger">Get Started</a>
