--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,6 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <div id="logo-container" class="brand-logo center"><img src="assets/images/logo.png" class="responsive-img" id="logo"></div>
-<!--       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Dashboard</a></li>
-      </ul>
- -->
-{{!--       <ul id="nav-mobile" class="side-nav">
-        <li><a href="#">Dashboard</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-    </div> --}}
   </nav>
 
   <div id="index-banner" class="parallax-container">
@@ -67,9 +58,46 @@
         </div>
         </form> --}}
       </div>
+    </div>
 
 
   <div class="container">
     <div class="section">
+      <div class="row">
+        <div class="col s12 m12">
+          <div class="icon-block">
+            <h2 class="center green-text accent-4"><i class="material-icons">group</i></h2>
+            <h5 class="center">Great Things Start Small</h5>
+
+            <p class="light">Small groups need the tools to grow. We help you get going with a simple platform to manage your members, your communications, and your events. Keep your organization focused with our drag-and-drop interface that helps you update everyone on current priorities, and let users choose their preferences so they don't miss out.</p>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+
+  <div class="parallax-container valign-wrapper">
+{{!--     <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 brown-text">A modern responsive front-end framework based on Material Design</h5>
+        </div>
+      </div>
+    </div> --}}
+    <div class="parallax"><img src="/assets/images/background2.jpg" alt="Unsplashed background img 2"></div>
+  </div>
+    <div class="container">
+    <div class="section">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h4>About</h4>
+          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  </div>
   </div>
