--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="assets/css/reset.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="assets/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel='stylesheet' href='assets/css/fullcalendar.css' />
   <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
@@ -17,6 +18,8 @@
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="assets/js/materialize.js"></script>
+  <script src='assets/js/moment.min.js'></script>
+  <script src='assets/js/fullcalendar.js'></script>
   <script src="assets/js/typed.js"></script>
   <script src="assets/js/init.js"></script>
 
