--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -66,10 +66,10 @@
       <div class="row">
         <div class="col s12 m12">
           <div class="icon-block">
-            <h2 class="center green-text accent-4"><i class="material-icons">group</i></h2>
-            <h5 class="center">Great Things Start Small</h5>
+            <h2 class="center green-text text-accent-4"><i class="material-icons">group</i></h2>
+            <h5 class="center brown-text">Great Things Start Small</h5>
 
-            <p class="light">Small groups need the tools to grow. We help you get going with a simple platform to manage your members, your communications, and your events. Keep your organization focused with our drag-and-drop interface that helps you update everyone on current priorities, and let users choose their preferences so they don't miss out.</p>
+            <p class="brown-text light">Small groups need the tools to grow. We help you get going with a simple platform to manage your members, your communications, and your events. Keep your organization focused with our drag-and-drop interface that helps you update everyone on current priorities, and let users choose their preferences so they don't miss out.</p>
           </div>
         </div>
       </div>
@@ -91,9 +91,8 @@
 
       <div class="row">
         <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>About</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h5 class="brown-text">About</h5>
+          <p class="brown-text light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
         </div>
       </div>
 
