--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -67,9 +67,9 @@
         <div class="col s12 m12">
           <div class="icon-block">
             <h2 class="center green-text text-accent-4"><i class="material-icons">group</i></h2>
-            <h5 class="center brown-text">Great Things Start Small</h5>
+            <h5 class="center green-text text-accent-4">Great Things Start Small</h5>
 
-            <p class="brown-text light">Small groups need the tools to grow. We help you get going with a simple platform to manage your members, your communications, and your events. Keep your organization focused with our drag-and-drop interface that helps you update everyone on current priorities, and let users choose their preferences so they don't miss out.</p>
+            <p class="green-text light">Small groups need the tools to grow. We help you get going with a simple platform to manage your members, your communications, and your events. Keep your organization focused with our drag-and-drop interface that helps you update everyone on current priorities, and let users choose their preferences so they don't miss out.</p>
           </div>
         </div>
       </div>
@@ -91,12 +91,50 @@
 
       <div class="row">
         <div class="col s12 center">
-          <h5 class="brown-text">About</h5>
-          <p class="brown-text light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h5 class="green-text text-accent-4">About</h5>
         </div>
       </div>
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <img class="responsive-img center circle" src="/assets/images/al.jpg" onmouseover="this.src='/assets/images/al-informal.jpg'" onmouseout="this.src='/assets/images/al.jpg'">
+            <h5 class="green-text text-accent-4 center">Albert Min</h5>
+
+            <p class="brown-text light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center green-text text-accent-4"><i class="material-icons">group</i></h2>
+            <h5 class="green-text text-accent-4 center">Wil Cook</h5>
+
+            <p class="brown-text light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <img class="responsive-img center circle" src="/assets/images/phil-formal.jpg" onmouseover="this.src='/assets/images/phil-informal.jpg'" onmouseout="this.src='/assets/images/phil-formal.jpg'">
+            <h5 class="green-text text-accent-4 center">Philip Graham</h5>
+
+            <p class="brown-text light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+          </div>
+        </div>
+      </div>
+
 
     </div>
   </div>
   </div>
   </div>
+  <footer class="page-footer green accent-4">
+      <div class="footer-copyright green accent-4">
+      <div class="container">
+        <div class="row">
+          <p class="white-text">Copyright &copy; 2016 grootsapp. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
