Add image loader effect

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,8 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="assets/images/background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax placeholder" data-large="/assets/images/background1.jpg"><img src="/assets/images/background1small.jpg" class="img-small" alt="Unsplashed background img 1">
+    </div>
   </div>
   <!-- Login or register modal -->
   <div id="login" class="modal">
@@ -69,7 +70,7 @@
             <h2 class="center green-text text-accent-4"><i class="material-icons">group</i></h2>
             <h5 class="center green-text text-accent-4">Great Things Start Small</h5>
 
-            <p class="green-text light">Small groups need the tools to grow. We help you get going with a simple platform to manage your members, your communications, and your events. Keep your organization focused with our drag-and-drop interface that helps you update everyone on current priorities, and let users choose their preferences so they don't miss out.</p>
+            <p class="brown-text light">Small groups need the tools to grow. We help you get going with a simple platform to manage your members, your communications, and your events. Keep your organization focused with our drag-and-drop interface that helps you update everyone on current priorities, and let users choose their preferences so they don't miss out.</p>
           </div>
         </div>
       </div>
@@ -95,12 +96,21 @@
         </div>
       </div>
       <div class="row">
+        <div class="col s12">
+          <p class="brown-text light">
+            As a small team, we understand the growing pains that come with expanding in all directions while maintaining focus. We bring our daily insights into building the right features to help you get back to working on your big ideas together.
+          </p>
+        </div>
+      </div>
+      <div class="row">
         <div class="col s12 m4">
-          <div class="icon-block">
-            <img class="responsive-img center circle" src="/assets/images/al.jpg" onmouseover="this.src='/assets/images/al-informal.jpg'" onmouseout="this.src='/assets/images/al.jpg'">
+          <div class="row">
+            <img class="col s4 offset-s4 m8 offset-m2 l8 offset-l2 responsive-img center circle" src="/assets/images/al.jpg" onmouseover="this.src='/assets/images/al-informal.jpg'" onmouseout="this.src='/assets/images/al.jpg'">
+            </div>
+            <div class="row">
             <h5 class="green-text text-accent-4 center">Albert Min</h5>
 
-            <p class="brown-text light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="brown-text light">Al brings over 10 years of non-profit experience, and as anyone in that sector knows, large ambitions, limited resources, and short-staffing means everyone stretches beyond their limits to reach for collective goals. He enjoys the challenges that small teams require and faces each problem as an opportunity to learn.</p>
           </div>
         </div>
 
@@ -114,8 +124,10 @@
         </div>
 
         <div class="col s12 m4">
-          <div class="icon-block">
-            <img class="responsive-img center circle" src="/assets/images/phil-formal.jpg" onmouseover="this.src='/assets/images/phil-informal.jpg'" onmouseout="this.src='/assets/images/phil-formal.jpg'">
+          <div class="row">
+            <img class="col s4 offset-s4 m8 offset-m2 l8 offset-l2 responsive-img center circle" src="/assets/images/phil-formal.jpg" onmouseover="this.src='/assets/images/phil-informal.jpg'" onmouseout="this.src='/assets/images/phil-formal.jpg'">
+            </div>
+            <div="row">
             <h5 class="green-text text-accent-4 center">Philip Graham</h5>
 
             <p class="brown-text light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
