--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -101,7 +101,6 @@ p {
     top: 0;
   }
 }
-
 .icon-block {
   padding: 0 15px;
 }
@@ -111,4 +110,32 @@ p {
 
 footer.page-footer {
   margin: 0;
+}
+
+/*Styling for image loader*/
+.placeholder {
+  background-color: #f6f6f6;
+  background-size: cover;
+  background-repeat: no-repeat;
+  /*position: relative;*/
+  overflow: hidden;
+}
+
+.placeholder img {
+  /*position: absolute;*/
+  opacity: 0;
+/*  top: 0;
+  left: 0;
+  width: 100%;
+*/  transition: opacity 1s linear;
+}
+
+.placeholder img.loaded {
+  opacity: 1;
+}
+
+.img-small {
+  filter: blur(50px);
+  /* this is needed so Safari keeps sharp edges */
+  transform: scale(1);
 }
