--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -144,7 +144,7 @@
       <div class="footer-copyright green accent-4">
       <div class="container">
         <div class="row">
-          <p class="white-text">Copyright &copy; 2016 grootsapp. All rights reserved.</p>
+          <p class="white-text center">Copyright &copy; 2016 grootsapp. All rights reserved.</p>
         </div>
       </div>
     </div>
