--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
         <li><a href="#">Events</a></li>
         <li><a href="#">Volunteer</a></li>
         <li><a href="#">Members</a></li>
-        <li><a id="logout" href="#">Logout</li>
+        <li><a id="logout" href="/logout">Logout</li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse show-on-large left"><i class="material-icons">menu</i></a>
     </div>
