Fix drag-and-drop jquery ui link

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,9 +18,7 @@
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script
-  src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-  crossorigin="anonymous"></script>
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
   <script src="assets/js/materialize.js"></script>
   <script src='assets/js/moment.min.js'></script>
   <script src='assets/js/fullcalendar.js'></script>
