Add default group to user when creating first group.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -130,7 +130,7 @@
             <div="row">
             <h5 class="green-text text-accent-4 center">Philip Graham</h5>
 
-            <p class="brown-text light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="brown-text light">Phil is an IT project manager with previous experience in mainframe programming, giving him insight into both sides of application development. A big fan of internet commerce, he likes the idea of simple, inexpensive, and flexible online applications that empower people to make things happen online, whether it's a business, a cause, or a hobby.</p>
           </div>
         </div>
       </div>
