Add/join group button and fixed default group passing

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -140,6 +140,7 @@ footer.page-footer {
   transform: scale(1);
 }
 
+/*Styling for drag-and-drop*/
 .ui-state-hover {
   background: #795548;   
 }
