--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -69,8 +69,9 @@
           <div class="icon-block">
             <h2 class="center green-text text-accent-4"><i class="material-icons">group</i></h2>
             <h5 class="center green-text text-accent-4">Great Things Start Small</h5>
-
-            <p class="brown-text light">Small groups need the tools to grow. We help you get going with a simple platform to manage your members, your communications, and your events. Keep your organization focused with our drag-and-drop interface that helps you update everyone on current priorities, and let users choose their preferences so they don't miss out.</p>
+            <div class="container">
+              <p class="brown-text light">Small groups need the tools to grow. We help you get going with a simple platform to manage your members, your communications, and your events. Keep your organization focused with our drag-and-drop interface that helps you update everyone on current priorities, and let users choose their preferences so they don't miss out.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -97,29 +98,35 @@
       </div>
       <div class="row">
         <div class="col s12">
-          <p class="brown-text light">
-            As a small team, we understand the growing pains that come with expanding in all directions while maintaining focus. We bring our daily insights into building the right features to help you get back to working on your big ideas together.
-          </p>
+          <div class="container">
+            <p class="brown-text light">
+              As a small team, we understand the growing pains that come with expanding in all directions while maintaining focus. We bring our daily insights into building the right features to help you get back to working on your big ideas together.
+            </p>
+          </div>
         </div>
       </div>
       <div class="row">
         <div class="col s12 m4">
           <div class="row">
             <img class="col s4 offset-s4 m8 offset-m2 l8 offset-l2 responsive-img center circle" src="/assets/images/al.jpg" onmouseover="this.src='/assets/images/al-informal.jpg'" onmouseout="this.src='/assets/images/al.jpg'">
-            </div>
+          </div>
             <div class="row">
             <h5 class="green-text text-accent-4 center">Albert Min</h5>
-
-            <p class="brown-text light">Al brings over 10 years of non-profit experience, and as anyone in that sector knows, large ambitions, limited resources, and short-staffing means everyone stretches beyond their limits to reach for collective goals. He enjoys the challenges that small teams require and faces each problem as an opportunity to learn.</p>
+            <div class="container">
+              <p class="brown-text light profile-text">Al brings over 10 years of non-profit experience, and as anyone in that sector knows, large ambitions, limited resources, and short-staffing means everyone stretches beyond their limits to reach for collective goals. He enjoys the challenges that small teams require and faces each problem as an opportunity to learn.</p>
+            </div>
           </div>
         </div>
 
         <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center green-text text-accent-4"><i class="material-icons">group</i></h2>
+          <div class="row">
+            <img src="/assets/images/wil-formal.jpg" class="col s4 offset-s4 m8 offset-m2 l8 offset-l2 responsive-img center circle">
+          </div>
+          <div class="row">
             <h5 class="green-text text-accent-4 center">Wil Cook</h5>
-
-            <p class="brown-text light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <div class="container">
+            <p class="brown-text light profile-text">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            </div>
           </div>
         </div>
 
@@ -129,8 +136,9 @@
             </div>
             <div="row">
             <h5 class="green-text text-accent-4 center">Philip Graham</h5>
-
-            <p class="brown-text light">Phil is an IT project manager with previous experience in mainframe programming, giving him insight into both sides of application development. A big fan of internet commerce, he likes the idea of simple, inexpensive, and flexible online applications that empower people to make things happen online, whether it's a business, a cause, or a hobby.</p>
+            <div class="container">
+            <p class="brown-text light profile-text">Phil is an IT project manager with previous experience in mainframe programming, giving him insight into both sides of application development. A big fan of internet commerce, he likes the idea of simple, inexpensive, and flexible online applications that empower people to make things happen online, whether it's a business, a cause, or a hobby.</p>
+            </div>
           </div>
         </div>
       </div>
