--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,8 +1,8 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper">
-      <a id="group-name" href="#" class="brand-logo center">{{groupName}}</a>
-      <a id="logo-container" href="#" class="brand-logo right"><img src="assets/images/logo.png" class="responsive-img" id="logo"></a>
-
+{{!--       <a id="group-name" href="#" class="brand-logo center">{{groupName}}</a> --}}
+      <div class="row nav-row">
+      <div class="col s4 left">
       <ul id="nav-mobile" class="side-nav">
         <li><a href="#">Dashboard</a></li>
         <li><a href="#">Events</a></li>
@@ -11,7 +11,21 @@
         <li><a href="/dashboard?group=addjoin">Add/Join Group</a></li>
         <li><a id="logout" href="/logout">Logout</li>
       </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse show-on-large left"><i class="material-icons">menu</i></a>
+      <a href="#" data-activates="nav-mobile" class="button-collapse show-on-large left green-text text-accent-4"><i class="material-icons">menu</i></a>
+    </div>
+      <div class="col s4 center dropdown-button hoverable" data-activates="user-groups">
+      <ul id="user-groups" class="dropdown-content" data-usergroups="{{userGroups}}">
+        {{#each userGroups}}
+        <li><a href="#" class="green-text text-accent-4 center">{{this}}</a></li>
+        {{/each}}
+{{!--         <li><a href="#" class="green-text text-accent-4 center">Group Two</a></li>
+        <li><a href="#" class="green-text text-accent-4 center">Group Three</a></li> --}}
+      </ul>
+      <h4 class="white green-text text-accent-4">{{groupName}}</h2>
+      </div>
+      <div class="col s4">
+      <a id="logo-container" href="#" class="brand-logo right"><img src="assets/images/logo.png" class="responsive-img" id="logo"></a>
+      </div>
     </div>
   </nav>
   <section>
@@ -26,11 +40,48 @@
       </div>
 
       <div id="events" class="col s12 m12 l6 dragdrop">
+
         <div class=card>
           <div class="card-content">
             <span class="card-title">Events</span>
             <div id="calendar" class="container"></div>
           </div>
+          
+                <div id="calendar-event" class="modal">
+                  <div class="modal-content">
+                    <h4>Modal Header</h4>
+                    <p>A bunch of text</p>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+                  </div>
+                </div>
+
+          <div class="row button-row">
+            
+            {{!-- Button to add event and modal form. --}}
+            <div class="col s4 hoverable event-add">
+              <div class="card-action">
+                <a class="green-text text-accent-4" href="#event-add">Add Event</a>
+                <div id="event-add" class="modal">
+                  <div class="modal-content">
+                    <h4>Modal Header</h4>
+                    <p>A bunch of text</p>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col s8 event-add">
+              <div class="card-action">
+              </div>
+            </div>
+
+          </div>
+
         </div>
       </div>
 
