--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,15 @@
 </head>
 <body>
 	{{{ body }}}
+  <footer class="page-footer green accent-4">
+      <div class="footer-copyright green accent-4">
+      <div class="container">
+        <div class="row">
+          <p class="white-text center">Copyright &copy; 2016 grootsapp. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
