Add event functioning

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -120,12 +120,12 @@
 
         <div class="col s12 m4">
           <div class="row">
-            <img src="/assets/images/wil-formal.jpg" class="col s4 offset-s4 m8 offset-m2 l8 offset-l2 responsive-img center circle">
+            <img src="/assets/images/wil-formal.jpg" class="col s4 offset-s4 m8 offset-m2 l8 offset-l2 responsive-img center circle" onmouseover="this.src='/assets/images/wil-informal.jpg'" onmouseout="this.src='/assets/images/wil-formal.jpg'">
           </div>
           <div class="row">
             <h5 class="green-text text-accent-4 center">Wil Cook</h5>
             <div class="container">
-            <p class="brown-text light profile-text">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="brown-text light profile-text">Wil has worked with non-profit organizations of all sizes, from just 2 volunteers to over 23,000 employees, so he is well aware that all of them are struggling to get the job done with limited resources. Although access to all-in-one organizational tools is a bigger problem for smaller organizations, he has also seen smaller&mdash;and often more community minded&mdash;departments within massive non-profits get waylayed by similar budgetary issues. Wil knows that if a team can't afford a CRM, then paying for the additional staffing to resolve the lack thereof is also out of the question. Wil's dog is also his spirit animal.</p>
             </div>
           </div>
         </div>
