--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -149,3 +149,293 @@ footer.page-footer {
 .ui-state-active {
   background: #00c853;   
 }
+
+.picker__holder.green-picker .picker__date-display,
+.picker__holder.green-picker .picker__day--selected,
+.picker__holder.green-picker .picker__day--selected:hover,
+.picker__holder.green-picker .picker--focused .picker__day--selected {
+  background: #4caf50 none repeat scroll 0 0;
+}
+
+/* ==========================================================================
+   $BASE-TIME-PICKER
+   ========================================================================== */
+/**
+ * The list of times.
+ */
+.picker__list {
+  list-style: none;
+  padding: 0.75em 0 4.2em;
+  margin: 0;
+}
+/**
+ * The times on the clock.
+ */
+.picker__list-item {
+  border-bottom: 1px solid #dddddd;
+  border-top: 1px solid #dddddd;
+  margin-bottom: -1px;
+  position: relative;
+  background: #ffffff;
+  padding: .75em 1.25em;
+}
+@media (min-height: 46.75em) {
+  .picker__list-item {
+    padding: .5em 1em;
+  }
+}
+/* Hovered time */
+.picker__list-item:hover {
+  cursor: pointer;
+  color: #000000;
+  background: #b1dcfb;
+  border-color: #0089ec;
+  z-index: 10;
+}
+/* Highlighted and hovered/focused time */
+.picker__list-item--highlighted {
+  border-color: #0089ec;
+  z-index: 10;
+}
+.picker__list-item--highlighted:hover,
+.picker--focused .picker__list-item--highlighted {
+  cursor: pointer;
+  color: #000000;
+  background: #b1dcfb;
+}
+/* Selected and hovered/focused time */
+.picker__list-item--selected,
+.picker__list-item--selected:hover,
+.picker--focused .picker__list-item--selected {
+  background: #0089ec;
+  color: #ffffff;
+  z-index: 10;
+}
+/* Disabled time */
+.picker__list-item--disabled,
+.picker__list-item--disabled:hover,
+.picker--focused .picker__list-item--disabled {
+  background: #f5f5f5;
+  border-color: #f5f5f5;
+  color: #dddddd;
+  cursor: default;
+  border-color: #dddddd;
+  z-index: auto;
+}
+/**
+ * The clear button
+ */
+.picker--time .picker__button--clear {
+  display: block;
+  width: 80%;
+  margin: 1em auto 0;
+  padding: 1em 1.25em;
+  background: none;
+  border: 0;
+  font-weight: 500;
+  font-size: .67em;
+  text-align: center;
+  text-transform: uppercase;
+  color: #666;
+}
+.picker--time .picker__button--clear:hover,
+.picker--time .picker__button--clear:focus {
+  color: #000000;
+  background: #b1dcfb;
+  background: #ee2200;
+  border-color: #ee2200;
+  cursor: pointer;
+  color: #ffffff;
+  outline: none;
+}
+.picker--time .picker__button--clear:before {
+  top: -0.25em;
+  color: #666;
+  font-size: 1.25em;
+  font-weight: bold;
+}
+.picker--time .picker__button--clear:hover:before,
+.picker--time .picker__button--clear:focus:before {
+  color: #ffffff;
+}
+
+/* ==========================================================================
+   $DEFAULT-TIME-PICKER
+   ========================================================================== */
+/**
+ * The frame the bounds the time picker.
+ */
+.picker--time .picker__frame {
+  min-width: 256px;
+  max-width: 320px;
+}
+/**
+ * The picker box.
+ */
+.picker--time .picker__box {
+  font-size: 1em;
+  background: #f2f2f2;
+  padding: 0;
+}
+@media (min-height: 40.125em) {
+  .picker--time .picker__box {
+    margin-bottom: 5em;
+  }
+}
+
+/* ==========================================================================
+   $DEFAULT-TIME-PICKER
+   ========================================================================== */
+   .clockpicker-display {
+  font-size:3rem;
+  font-weight:bold;
+  text-align:right;
+  color: rgba(255, 255, 255, 0.6);
+  clear:both;
+}
+.clockpicker-display > div {
+  display:inline;
+}
+
+.clockpicker-span-am-pm {
+  font-size: 1.5rem;
+  float:right;
+}
+@media only screen and (min-width: 601px) {
+  .clockpicker-display {
+    text-align:center;
+    display:block;
+  }
+  .clockpicker-span-am-pm {
+    font-size: 1.5rem;
+    float:none;
+  }
+  .clockpicker-display > div {
+    display:block;
+  }
+}
+
+
+.text-primary{
+  color: rgba(255, 255, 255, 1)
+}
+.clockpicker-span-hours,
+.clockpicker-span-minutes,
+.clockpicker-span-am-pm div {
+  cursor: pointer;
+}
+.clockpicker-moving {
+  cursor: move;
+}
+.clockpicker-plate {
+  background-color: #eeeeee;
+  border-radius: 50%;
+  width: 270px;
+  height: 270px;
+  overflow: visible;
+  position: relative;
+  margin: auto;
+  margin-top: 20px;
+  /* Disable text selection highlighting. Thanks to Hermanya */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.clockpicker-canvas,
+.clockpicker-dial {
+  width: 270px;
+  height: 270px;
+  position: absolute;
+  left: -1px;
+  top: -1px;
+}
+.clockpicker-minutes {
+  visibility: hidden;
+}
+.clockpicker-tick {
+  border-radius: 50%;
+  color: #666;
+  line-height: 40px;
+  text-align: center;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  cursor: pointer;
+}
+.clockpicker-tick.active,
+.clockpicker-tick:hover {
+  background-color: rgba(0, 150, 136, 0.25);
+}
+.clockpicker-dial {
+  -webkit-transition: -webkit-transform 350ms, opacity 350ms;
+  -moz-transition: -moz-transform 350ms, opacity 350ms;
+  -ms-transition: -ms-transform 350ms, opacity 350ms;
+  -o-transition: -o-transform 350ms, opacity 350ms;
+  transition: transform 350ms, opacity 350ms;
+}
+.clockpicker-dial-out {
+  opacity: 0;
+}
+.clockpicker-hours.clockpicker-dial-out {
+  -webkit-transform: scale(1.2, 1.2);
+  -moz-transform: scale(1.2, 1.2);
+  -ms-transform: scale(1.2, 1.2);
+  -o-transform: scale(1.2, 1.2);
+  transform: scale(1.2, 1.2);
+}
+.clockpicker-minutes.clockpicker-dial-out {
+  -webkit-transform: scale(.8, .8);
+  -moz-transform: scale(.8, .8);
+  -ms-transform: scale(.8, .8);
+  -o-transform: scale(.8, .8);
+  transform: scale(.8, .8);
+}
+.clockpicker-canvas {
+  -webkit-transition: opacity 175ms;
+  -moz-transition: opacity 175ms;
+  -ms-transition: opacity 175ms;
+  -o-transition: opacity 175ms;
+  transition: opacity 175ms;
+}
+.clockpicker-canvas-out {
+  opacity: 0.25;
+}
+.clockpicker-canvas-bearing {
+  stroke: none;
+  fill: rgba(0, 77, 64, 0.75);
+}
+.clockpicker-canvas-fg {
+  stroke: none;
+  fill: rgba(0, 77, 64, 0.25);
+}
+.clockpicker-canvas-bg {
+  stroke: none;
+  fill: rgba(0, 150, 136, 0.25);
+}
+.clockpicker-canvas-bg-trans {
+  fill: rgba(0, 150, 136, 0.25);
+}
+.clockpicker-canvas line {
+  stroke: rgba(0, 150, 136, 0.25);
+  stroke-width: 1;
+  stroke-linecap: round;
+  /*shape-rendering: crispEdges;*/
+}
+.clockpicker-am-pm-block{
+  margin-top: -10px;
+  width: 100%;
+  height: 50px;
+}
+.clockpicker-button.am-button {
+  height: 45px;
+  width: 45px;
+  float: left;
+}
+.clockpicker-button.pm-button {
+  height: 45px;
+  width: 45px;
+  float: right;
+}
