--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -68,15 +68,61 @@
             <div class="col s4 hoverable event-add">
               <div class="card-action">
                 <a class="green-text text-accent-4" href="#event-add">Add Event</a>
+
                 <div id="event-add" class="modal">
                   <div class="modal-content">
-                    <h4>Modal Header</h4>
-                    <p>A bunch of text</p>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+                    <h4 class="center">Add an Event</h4>
+                    <form method="POST" class="col s12 center-align event-post" id="event-add-form" action="/event/add?_method=POST">
+                      <input type="hidden" name="groupcode" value="{{groupcode}}">
+                      <input type="hidden" name="groupID" value="{{groupID}}">
+                      <div class="row">
+                        <div class="input-field col s6">
+                          <i class="material-icons prefix green-text text-accent-4">today</i>
+                          <input id="event-start-date" name="startDate" type="date" class="validate datepicker" required="required">
+                          <label for="event-start-date">Start Date</label>
+                        </div>
+                        <div class="input-field col s6">
+                          <i class="material-icons prefix green-text text-accent-4">schedule</i>
+                          <input id="event-start-time" name="startTime" type="text" class="validate time timepicker" required="required">
+                          <label for="event-start-time">Start Time</label>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="input-field col s6">
+                          <i class="material-icons prefix green-text text-accent-4">today</i>
+                          <input id="event-end-date" name="endDate" type="date" class="validate datepicker" required="required">
+                          <label for="event-end-date">End Date</label>
+                        </div>
+                        <div class="input-field col s6">
+                          <i class="material-icons prefix green-text text-accent-4">schedule</i>
+                          <input id="event-end-time" name="endTime" type="text" class="validate time timepicker" required="required">
+                          <label for="event-end-time">End Time</label>
+                        </div>
+                      </div>
+
+                      <div class="row">
+                        <div class="input-field col s12">
+                          <input id="event-name" name="eventName" type="text" class="validate" required="required">
+                          <label for="event-name">Event Name</label>
+                        </div>
+                      </div>
+
+                      <div class="row">
+                        <div class="input-field col s12">
+                          <textarea id="event-description" name="eventDescription" type="text" class="validate materialize-textarea" required="required"></textarea>
+                          <label for="event-description">Event Description</label>
+                        </div>
+                      </div>
+
+                      <div class="row">
+                      <button class="btn waves-effect waves-light green accent-4 center" type="submit" name="action">Add Event
+                      </button>
+                      </div>
+
+                    </form>
                   </div>
                 </div>
+
               </div>
             </div>
 
