--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,6 +29,7 @@
   <script
   src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
   <script src="assets/js/materialize.js"></script>
+  <script src="assets/js/picker.time.js"></script>
   <script src='assets/js/moment.min.js'></script>
   <script src='assets/js/fullcalendar.js'></script>
   <script src="assets/js/typed.js"></script>
