google calendar plugin for fullcalendar found and added

--- a/views/unameLoginTest.html
+++ b/views/unameLoginTest.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+ <head>
+    <meta name="google-site-verification"
+             content="<meta name="google-site-verification" content="9YFnVJyt-MEFCLBalNPFbzqnvdZ_y07gUY1BZyciyTo" />" />
   <title>Document</title>
 </head>
 <body>
