--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,8 @@
   <script src="assets/js/picker.time.js"></script>
   <script src='assets/js/moment.min.js'></script>
   <script src='assets/js/fullcalendar.js'></script>
+  <script src='assets/js/gcal.js'></script>
+  <script src='calendar/calendar.js'></script>
   <script src="assets/js/typed.js"></script>
   <script src="assets/js/init.js"></script>
 
